# nrogue

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.4.8-pre1  LICENSE  Makefile.win  README.md  SDL2-QT-config.txt  application.h  compile-and-run.bat  compile-and-run.sh  compile.bat  compile.sh  config-template.txt  config.txt  constants.h  game-object.h  infostate.cpp  logger.h  main.cpp  mainstate.cpp  mainstate.h  map.cpp  map.h  menustate.cpp  menustate.h  nrogue.cbp  nrogue.depend  nrogue.dev  nrogue.layout  nrogue_private.rc  printer.h  run-cppcheck.sh  save.nrg  static-analysis.txt  tile.h  util.h  version-config.h.in
.github/workflows/: cmake.yml  linux.yml  mingw.yml  msvc.yaml  msvc.yml  ncurses.yml
dumb-compile/: compile-and-run.sh
inc/: actor-component.h  ai-dummy.h  ai-monster-basic.h  application.h  attack-state.h  component.h  constants.h  container-component.h  container-interact-state.h  door-component.h  endgame-state.h  enter-name-state.h  exiting-state.h  fighter-component.h  game-object.h  game-objects-factory.h  gamestate.h  go-timer-destroyer.h  help-state.h  infostate.h  interact-input-state.h  intro-state.h  inventory-state.h  item-component.h  level-builder.h  logger.h  look-input-state.h  mainstate.h  map-level-base.h  map-level-mines.h  map-level-town.h  map.h  menustate.h  message-box-state.h  message-log-state.h  nrogue_private.h  player.h  printer.h  rect.h  rng.h  (+8 more)
inc/ai/: ai-monster-basic.h  ai-npc.h
inc/aux/: colorpair.h  constants.h  room-helper.h  tests.h  util.h
inc/components/: ai-component.h  ai-monster-basic.h  container-component.h  item-component.h  trader-component.h
inc/core/: game-object.h  level-builder.h  player.h
inc/dungeon-generators/: cellular-automata.h  dg-base.h  from-layouts.h  tunneler.h
inc/extra/: constants.h  room-helper.h  tests.h  util.h
inc/levels/: map-level-base.h  map-level-caves.h  map-level-mines.h  map-level-town.h
inc/singletons/: game-objects-factory.h  printer.h  rng.h
inc/states/: infostate.h  interact-input-state.h  intro-state.h  inventory-state.h  mainstate.h  message-log-state.h  npc-interact-state.h  shopping-state.h
resources/: tileset_32x32.xcf
resources/math/: Bonuses distribution.ods  Hit chance distribution.ods  NoDrop.ods  Wands capacity and cost distribution.ods  Weights to probability.ods
resources/sources/: bed.aseprite  crate.aseprite  pickaxe.aseprite  potion.aseprite  ring1.aseprite  stairs-up.aseprite  stone-tiles-gray-purple.aseprite  tileset_32x32.xcf
src/: ai-dummy.cpp  ai-monster-basic.cpp  application.cpp  attack-state.cpp  component.cpp  container-component.cpp  container-interact-state.cpp  door-component.cpp  endgame-state.cpp  enter-name-state.cpp  exiting-state.cpp  game-object.cpp  game-objects-factory.cpp  go-timer-destroyer.cpp  help-state.cpp  infostate.cpp  interact-input-state.cpp  intro-state.cpp  inventory-state.cpp  item-component.cpp  level-builder.cpp  look-input-state.cpp  main.cpp  mainstate.cpp  map-level-base.cpp  map-level-mines.cpp  map-level-town.cpp  map.cpp  menustate.cpp  message-box-state.cpp  message-log-state.cpp  player.cpp  printer.cpp  rng.cpp  select-class-state.cpp  shrine-component.cpp  stairs-component.cpp
src/ai/: ai-idle.h  ai-model-base.cpp  ai-model-base.h  ai-monster-basic.cpp  ai-monster-basic.h  ai-monster-bat.cpp  ai-monster-bat.h  ai-monster-herobrine.cpp  ai-monster-herobrine.h  ai-monster-smart.cpp  ai-monster-smart.h  ai-monster-spider.cpp  ai-monster-spider.h  ai-monster-troll.cpp  ai-monster-vampire-bat.cpp  ai-npc.cpp  ai-npc.h
src/ai-states/: ai-chase-player-state.cpp  ai-chase-player-state.h  ai-idle-state.cpp  ai-idle-state.h  ai-patrol-state.cpp  ai-patrol-state.h  ai-state-base.cpp  ai-state-base.h  ai-wander-state.cpp  ai-wander-state.h
src/behaviour-tree/: behaviour-tree.cpp  behaviour-tree.h  blackboard.cpp  blackboard.h  bts-parser.cpp  bts-parser.h
src/components/: ai-component.cpp  ai-component.h  ai-monster-basic.cpp  component.cpp  component.h  container-component.cpp  container-component.h  door-component.cpp  door-component.h  equipment-component.cpp  equipment-component.h  go-timed-destroyer.cpp  go-timed-destroyer.h  go-timer-destroyer.cpp  item-component.cpp  item-component.h  ragdoll-component.cpp  ragdoll-component.h  shrine-component.cpp  shrine-component.h  stairs-component.cpp  stairs-component.h  timed-destroyer-component.cpp  timed-destroyer-component.h  town-portal-component.cpp  town-portal-component.h  trader-component.cpp  trader-component.h  trigger-component.cpp  trigger-component.h
src/core/: attribute.cpp  attribute.h  effect.cpp  effect.h  game-object.cpp  game-object.h  item-data.cpp  item-data.h  item-use-callbacks.cpp  item-use-callbacks.h  item-use-handlers.cpp  item-use-handlers.h  level-builder.cpp  level-builder.h  loot-generators.cpp  loot-generators.h  player.cpp  player.h  (+2 more)
src/tests/: CMakeLists.txt
tests/: CMakeLists.txt  README.txt  main.cpp
tests/all/: CMakeLists.txt  main.cpp
tests/bs-crypt/: CMakeLists.txt  main.cpp
tests/dg-blob-tiles/: CMakeLists.txt  main.cpp
tests/dg-bsp/: CMakeLists.txt  main.cpp
tests/dg-cellular/: CMakeLists.txt  main.cpp
tests/dg-feature-rooms/: CMakeLists.txt  main.cpp
tests/dg-layouts/: CMakeLists.txt  main.cpp
tests/dg-perm-tiles/: CMakeLists.txt  main.cpp
tests/dg-recbt/: CMakeLists.txt  main.cpp
tests/dg-rooms/: CMakeLists.txt  main.cpp
tests/dg-tunneler/: CMakeLists.txt  main.cpp
tests/dg-tunneler-bt/: CMakeLists.txt  main.cpp
tests/name-gen/: CMakeLists.txt  main.cpp
tests/rooms-transform/: CMakeLists.txt  main.cpp
tests/savefile/: CMakeLists.txt  main.cpp
tests/serialization/: CMakeLists.txt  main.cpp
tests/test-scene/: CMakeLists.txt  main.cpp
tests/trie/: CMakeLists.txt  main.cpp
utils/: bat.bts  bts-codec.py  bts-compiler-decompiler.py  bts-compiler.py  bts-decompiler.py  bts-to-puml.py  bts-visualizer.py  count-lines.sh  file-to-b64.py  kobold.puml  map-obfuscator.py  run-cppcheck.sh  savefile-pretty-printer.py  script.btc  script.bts  script.puml  string-obfuscator.py
(+263 files in other folders)
