set (CMAKE_CXX_STANDARD 14)
set (CMAKE_CXX_STANDARD_REQUIRED On)

add_subdirectory(all)
add_subdirectory(dg-tunneler)
add_subdirectory(dg-tunneler-bt)
add_subdirectory(dg-recbt)
add_subdirectory(dg-cellular)
add_subdirectory(dg-blob-tiles)
add_subdirectory(dg-bsp)
add_subdirectory(dg-perm-tiles)
add_subdirectory(rooms-transform)
